--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "76a32828",
    "metadata": {},
    "outputs": [],
@@ -160,74 +160,31 @@
    "id": "c05eb653",
    "metadata": {},
    "source": [
-    "1. Scelta attributi da mantenere\n",
-    "2. Impostare pesi (weight) in base a: Lunghezza strada e tipo di strada\n",
-    "3. Aggiunti di attributi custom, come:\n",
-    "    - **\"artificiale\"** = Di base \"False\" ma sarà \"True\" con aggiunta di archi ad hoc a scopi di calcolo percorsi minimi\n",
-    "    - **\"geometry\"** = Manteniamo il dato originale della geometria all'interno degli archi. Utile per conversione in gdf.\n",
-    "    - **\"tipo\"** = Attributo per distinguere la provenienza degli archi. Utile quando verranno uniti in un solo grafo.\n",
-    "4. Aggiunta di archi artificiali per connettere nodi molto vicini non connessi."
+    "Processo di ETL sul Grafo Raw scaricato da openstreet maps.\n",
+    "Il proceso comprende:\n",
+    "1. Selezione attributi da mantenere: name, highway, lenght, maxspeed, tunnel, access, service, geometry\n",
+    "2. - Aggiunta di attributi custom:\n",
+    "    - weight_multipler: Un moltiplicatore che verrà applicato a weigth in base a \"highway\" tramite\n",
+    "    il parametro \"custom_weights\", oppure da file se non specificato.\n",
+    "    N.B: di base cycleway dovrebbe assumere valore: 0, per dare massima priorità nel calcolo dei percorsi.\n",
+    "    - weight: Sarà di base: length * weight_multipler.\n",
+    "    - tipo: Un tag che viene assegnato a tutti i grafi del progetto. In questo caso assumerà valore \"Strade_ciclabili\".\n",
+    "    - artificial: Un tag che viene assegnato a tutit i grafi del progetto. Essendo questi archi reali: False\n",
+    "    - poi: Un tag che viene assegnato a tutti i grafi del progetto. Essendo queste le strade: False\n",
+    "3. Se Geometria non presente, aggiungiamo una LineString \"dritta\" tra i due nodi\n",
+    "(può capitare che non ci sia tra nodi molto vicini).\n",
+    "4. Infine il grafo viene reso bidirezionale senza ridondanza di archi tra due punti."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65d95026",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcola_peso_strada(highway, custom_weights:dict) -> float:\n",
-    "    \"\"\"\n",
-    "    Data una strada \"highway\" restituisce il calcolo del moltiplicatore di peso da inserire.\n",
-    "    Se in \"custom_weights\" viene inserita una chiave \"default\", in caso non venga trovata\n",
-    "    la strada richiesta verrà inserito quel valore. Se \"default\" non è inserito verrà usato\n",
-    "    \"99\", che rappresenta il peso massimo assegnabile ad una strada.\n",
-    "    \"\"\"\n",
-    "    if isinstance(highway, str):\n",
-    "        highway = [highway]\n",
-    "    max_weight = 99\n",
-    "    for h in highway:\n",
-    "        new_weight = custom_weights.get(h, custom_weights.get(\"default\", 99))\n",
-    "        if new_weight < max_weight:\n",
-    "            max_weight = new_weight\n",
-    "    return max_weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ae1289aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
-    "    G_strade = pickle.load(f)\n",
-    "with open(PATH_CUSTOM_WEIGHTS_STRADE_RAW, 'r') as f:\n",
-    "    custom_weights = json.load(f)\n",
-    "\n",
-    "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
-    "    # Copio i data ed elimino tutto il dizionario.\n",
-    "    data = data.copy()\n",
-    "    G_strade[u][v][k].clear()\n",
-    "    # Scelgo gli attributi da mantenere\n",
-    "    G_strade[u][v][k]['length'] = data['length']\n",
-    "    G_strade[u][v][k]['name'] = data.get('name', None)\n",
-    "    G_strade[u][v][k]['highway'] = data[\"highway\"]\n",
-    "    weight_multipler = calcola_peso_strada(data[\"highway\"], custom_weights)\n",
-    "    G_strade[u][v][k][\"weight_multipler\"] = weight_multipler\n",
-    "    G_strade[u][v][k]['weight'] = data['length'] * weight_multipler # Per ora\n",
-    "    G_strade[u][v][k][\"tipo\"] = \"Strade_ciclabili\"\n",
-    "    G_strade[u][v][k][\"artificiale\"] = False\n",
-    "    # ------------ Da capire se tenere ----------------\n",
-    "    G_strade[u][v][k][\"maxspeed\"] = data.get(\"maxspeed\", None)\n",
-    "    G_strade[u][v][k][\"tunnel\"] = data.get(\"tunnel\", None)\n",
-    "    G_strade[u][v][k][\"access\"] = data.get(\"access\", None)\n",
-    "    G_strade[u][v][k][\"service\"] = data.get(\"service\", None)\n",
-    "    # ------------------------------------------------\n",
-    "    G_strade[u][v][k][\"geometry\"] = data.get(\"geometry\", LineString([(G_strade.nodes[u][\"x\"], G_strade.nodes[u][\"y\"]),\n",
-    "                                        (G_strade.nodes[v][\"x\"], G_strade.nodes[v][\"y\"])]))\n",
-    "nx.set_node_attributes(G_strade, \"Strade_ciclabili\", \"tipo\")\n",
-    "G_strade = G_strade.to_undirected()"
+    "# Il tutto compattato in questa chiamata a funzione.\n",
+    "G_strade = Graph_functions.etl_strade_ciclabili()"
    ]
   },
   {
@@ -240,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "832886fa",
    "metadata": {},
    "outputs": [],
