aggiunto custom_graph_to_gdf

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import pickle\n",
     "import json\n",
     "\n",
+    "from shapely import Point\n",
     "import geopandas as gpd\n",
     "import networkx as nx\n",
     "from networkx.algorithms.approximation import steiner_tree\n",
@@ -115,38 +116,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_pesi = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+    "gdf_analisi_sport = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Eliminiamo connessioni \"artificiali\" usate per connettere i \"poi\" al grafo delle strade\n",
-    "gdf_pesi_mod = gdf_pesi[gdf_pesi[\"artificial\"] != True]\n",
+    "gdf_analisi_sport_mod = gdf_analisi_sport[gdf_analisi_sport[\"artificial\"] != True]\n",
     "\n",
     "# Eliminiamo i percorsi completamente contenuti all'interno dei \"poi\" poligonari: parchi\n",
     "gdf = gpd.read_file(PATH_PARCHI_CLEAN)\n",
     "geometry_parchi = gdf.union_all()\n",
     "gdf_senza_parchi = []\n",
-    "for idx, row in gdf_pesi_mod.iterrows():\n",
+    "for idx, row in gdf_analisi_sport_mod.iterrows():\n",
     "    if not geometry_parchi.contains(row.geometry):\n",
     "        gdf_senza_parchi.append(row)\n",
-    "gdf_pesi_mod = gpd.GeoDataFrame(gdf_senza_parchi, crs=CRS_GRAD)\n",
+    "gdf_analisi_sport_mod = gpd.GeoDataFrame(gdf_senza_parchi, crs=CRS_GRAD)\n",
     "\n",
     "# Salviamo per test di visualizzazione su kepler\n",
-    "gdf_pesi_mod.to_file(\"../Data/Clean/Analisi/sport_senza_parchi_con_pesi.geojson\")\n",
+    "gdf_analisi_sport_mod.to_file(\"../Data/Clean/Analisi/sport_senza_parchi_con_pesi.geojson\")\n",
     "\n",
     "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
-    "gdf_pesi_mod_most_highways = gdf_pesi_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "gdf_analisi_sport_mod_most_highways = gdf_analisi_sport_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
     "    \"length\": lambda x: sum(x/1000)\n",
     "    }).sort_values(by=\"length\", ascending=False)"
    ]
@@ -159,8 +160,105 @@
    "outputs": [],
    "source": [
     "# Stampiamo il risultato\n",
-    "print(gdf_pesi_mod_most_highways)\n",
-    "print(f\"Tot: {gdf_pesi_mod_most_highways[\"length\"].sum()}\")"
+    "print(gdf_analisi_sport_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_sport_mod_most_highways[\"length\"].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f06299f",
+   "metadata": {},
+   "source": [
+    "## Unione Rete Ciclabile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4040727e",
+   "metadata": {},
+   "source": [
+    "Provo a creare dei percorsi che hanno lo scopo di unire tutti i frammenti di ciclabili esistenti.\n",
+    "Quindi userò come \"poi\" tutti i nodi delle \"highway\"=cycleway"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28321313",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili = gpd.read_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "140ca9d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "168563"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_ciclabili)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "61f311c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_point_ciclabili = []\n",
+    "for idx, row in gdf_ciclabili.iterrows():\n",
+    "    gdf_point_ciclabili.append(Point(row.geometry.coords[0]))\n",
+    "    gdf_point_ciclabili.append(Point(row.geometry.coords[-1]))\n",
+    "gdf_point_ciclabili = gpd.GeoDataFrame(gdf_point_ciclabili, columns=[\"geometry\"], crs=CRS_GRAD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b0c34ab6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "337126"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_point_ciclabili)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2285db0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_list = [\n",
+    "    {\"gdf\":  gdf_point_ciclabili,\n",
+    "     \"tipo\": \"poi_ciclabili\"}\n",
+    "]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
    ]
   }
  ],
