--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -197,14 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "832886fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_edges = ox.graph_to_gdfs(G_strade, edges=True, nodes=False).reset_index().drop([\"u\", \"v\", \"key\"], axis=1)\n",
-    "\n",
-    "gdf_edges.to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\")\n",
+    "Graph_functions._custom_graph_to_gdf(G_strade).to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\")\n",
     "\n",
     "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_strade, f)"
