aggiunto "extended cycleway"

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import pickle\n",
     "import json\n",
     "\n",
-    "from shapely import Point\n",
+    "from shapely import Point, LineString\n",
     "import geopandas as gpd\n",
     "import networkx as nx\n",
     "from networkx.algorithms.approximation import steiner_tree\n",
@@ -111,12 +111,12 @@
    "id": "e1c8e634",
    "metadata": {},
    "source": [
-    "### Esempio di statisiche"
+    "### Statisiche"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -173,6 +173,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "28321313",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili = gpd.read_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4040727e",
    "metadata": {},
@@ -183,73 +193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28321313",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_ciclabili = gpd.read_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "140ca9d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "168563"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(gdf_ciclabili)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "61f311c0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdf_ciclabili_cycleway = gdf_ciclabili[gdf_ciclabili[\"highway\"] == \"cycleway\"]\n",
     "gdf_point_ciclabili = []\n",
-    "for idx, row in gdf_ciclabili.iterrows():\n",
+    "for idx, row in gdf_ciclabili_cycleway.iterrows():\n",
     "    gdf_point_ciclabili.append(Point(row.geometry.coords[0]))\n",
     "    gdf_point_ciclabili.append(Point(row.geometry.coords[-1]))\n",
     "gdf_point_ciclabili = gpd.GeoDataFrame(gdf_point_ciclabili, columns=[\"geometry\"], crs=CRS_GRAD)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "b0c34ab6",
+   "cell_type": "markdown",
+   "id": "6f9fa5c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "337126"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(gdf_point_ciclabili)"
+    "Faccio partire il calcolo dei percosi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e2285db0",
    "metadata": {},
    "outputs": [],
@@ -258,7 +225,94 @@
     "    {\"gdf\":  gdf_point_ciclabili,\n",
     "     \"tipo\": \"poi_ciclabili\"}\n",
     "]\n",
-    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=\"../Data/Clean/Analisi/extended_ciclabili.geojson\")\n",
+    "# Rimuoviamo gli archi artificiali che tanto in questo caso specifico sono archi di punti collegati con loro stessi\n",
+    "# Che quindi non rappresentano nulla, sono solo rumore\n",
+    "gdf_extended_ciclabili = gpd.read_file(\"../Data/Clean/Analisi/extended_ciclabili.geojson\")\n",
+    "gdf_extended_ciclabili = gdf_extended_ciclabili[gdf_extended_ciclabili[\"artificial\"]==False]\n",
+    "gdf_extended_ciclabili.reset_index(drop=True).to_file(\"../Data/Clean/Analisi/extended_ciclabili.geojson\", driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d07a64c4",
+   "metadata": {},
+   "source": [
+    "### Statistiche"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cc5d7a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_extended_ciclabili = gpd.read_file(\"../Data/Clean/Analisi/extended_ciclabili.geojson\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b15407e6",
+   "metadata": {},
+   "source": [
+    "1. Raggruppiamo per strade e vediamo i km per ogni tipologia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "aeb1b498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 length\n",
+      "highway                \n",
+      "cycleway     209.282437\n",
+      "footway       36.254350\n",
+      "residential   15.552589\n",
+      "secondary     13.979275\n",
+      "tertiary      11.675173\n",
+      "service        5.011441\n",
+      "308.9554463607366 km\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdf_extended_ciclabili_highway = gdf_extended_ciclabili.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"length\": lambda x: sum(x/1000)\n",
+    "    }).sort_values(by=\"length\", ascending=False)\n",
+    "print(gdf_extended_ciclabili_highway.head(6))\n",
+    "print(gdf_extended_ciclabili_highway[\"length\"].sum(), \"km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eda24324",
+   "metadata": {},
+   "source": [
+    "2. Calcoliamo i km nuovi da costruire (rimuoviamo cycleway che sono già costruite in teoria)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c305dc84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.67300939731115 km\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gdf_extended_ciclabili_highway.drop(\"cycleway\", axis=0).sum().values[0], \"km\")"
    ]
   }
  ],
